Document PPDG/src/objects/Instruction_for_HR__c.object
<CustomObject>
    <fields>
        <fullName>Instruction_Description__c</fullName>
        <label>Instruction Description</label>
        <length>5000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Processed__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Processed</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Staff_Member__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Staff Member</label>
        <referenceTo>Staff_Member__c</referenceTo>
        <relationshipLabel>Instructions for HR</relationshipLabel>
        <relationshipName>Instructions_for_HR</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Type_of_change__c</fullName>
        <label>Type of change</label>
        <picklist>
            <picklistValues>
                <fullName>Address change</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Change of role</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Change of department</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Change of pension contribution</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Salary increase</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Bank account change</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Payment of Directors fees</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Childcare vouchers change</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Add Car allowance</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Add Temporary Allowance</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Change to Hours</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>With_effect_from__c</fullName>
        <label>With effect from</label>
        <type>Date</type>
    </fields>
    <label>Instruction for HR</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <displayFormat>HRI{0000}</displayFormat>
        <label>Instruction for HR Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Instructions for HR</pluralLabel>
    <sharingModel>Private</sharingModel>
</CustomObject>